@@ -125,26 +125,6 @@
                     <reportVersion>2.15.0</reportVersion>
                </configuration>
            </plugin>
-
-           <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-compiler-plugin</artifactId>
-               <version>3.8.1</version>
-               <configuration>
-                   <source>11</source>
-                   <target>11</target>
-                   <compilerArgs>
-                       <arg>--add-modules</arg>
-                       <arg>java.base</arg>
-                   </compilerArgs>
-               </configuration>
-           </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.10.0</version> <!-- Обновленная версия плагина -->
-            </plugin>
        </plugins>
    </build>
 </project>
